--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
   <head>
     <title>Hello World</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Hello World</h1>
+    </header>
+  </body>
 </html>
