feat: add footer

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <header>
       <h1>Hello World</h1>
     </header>
+    <footer>
+      <p>Made with ❤️ by Samele Madrigali</p>
+    </footer>
   </body>
 </html>
