fix: type name error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>Hello World</h1>
     </header>
     <footer>
-      <p>Made with ❤️ by Samele Madrigali</p>
+      <p>Made with ❤️ by Samuele Madrigali</p>
     </footer>
   </body>
 </html>
