feat: add github link to footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>Hello World</h1>
     </header>
     <footer>
-      <p>Made with ❤️ by Samuele Madrigali</p>
+      <p>Made with ❤️ by <a href="https://github.com/samuelemadrigali" target="_blank">Samuele Madrigali</a></p>
     </footer>
   </body>
 </html>
