feat: add description to header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <body>
     <header>
       <h1>Hello World</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing <strong>elit</strong>.
+        Natus illum sed perspiciatis adipisci ipsum amet voluptates, laborum et enim dolores odit repellendus necessitatibus rerum asperiores aliquid nobis magni doloribus veniam.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ad quasi esse provident deserunt adipisci dignissimos velit in laudantium! Asperiores cumque aliquam, accusantium placeat provident voluptatem obcaecati fugit. 
+        Voluptatem, amet.</p>
     </header>
     <footer>
       <p>Made with ❤️ by <a href="https://github.com/samuelemadrigali" target="_blank">Samuele Madrigali</a></p>
